--- a/node-ejercicio-netflix/package.json
+++ b/node-ejercicio-netflix/package.json
@@ -11,5 +11,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1"
-  }
+  },
+  "description": "## ¿Cuántos ejercicios hemos hecho?",
+  "devDependencies": {}
 }
