--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mysql2": "^3.6.2"
   },
-  "description": "## ¿Cuántos ejercicios hemos hecho?",
-  "devDependencies": {}
+  "description": "## ¿Cuántos ejercicios hemos hecho?"
 }
