--- a/web/package.json
+++ b/web/package.json
@@ -10,11 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2",
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-        "react-router-dom": "^6.3.0"
-
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
